k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ml
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-ml
  template:
    metadata:
      labels:
        app: flask-ml
    spec:
      containers:
        - name: flask-ml
          image: flask-ml:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
