k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-ml
spec:
  type: NodePort
  selector:
    app: flask-ml
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
