k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ml
spec:
  rules:
    - host: test.kuyen.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-ml
                port:
                  number: 80
